--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <style>
       div {
         background-color: #82caaf;
-        color: #fff;
+        color: #000000;
         padding: 5px;
       }
       p {
@@ -66,7 +66,7 @@
 <style>
       div {
         background-color: #82caaf;
-        color: #fff;
+        color: #000000;
         padding: 5px;
       }
       p {
